# mcp-hot-news-server

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  test_server_startup.py
.github/workflows/: publish.yml  test.yml
examples/: basic_usage.py
src/mcp_hot_news/: Dockerfile  __init__.py  client.py  config.py  server.py
tests/: test_server.py
