[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-hot-news"
version = "1.0.0"
description = "基于FastMCP的多平台热点新闻聚合服务器 - Multi-platform Hot News Aggregation Server based on FastMCP"
authors = [{name = "ByteDance", email = "contact@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
keywords = ["mcp", "news", "hot-topics", "api", "aggregation", "fastmcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: News/Diary",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "fastmcp>=0.3.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "aiofiles>=23.0.0",
    "orjson>=3.8.0",
    "structlog>=23.0.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

langchain = [
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
]

[project.scripts]
mcp-hot-news = "mcp_hot_news.server:main"

[project.urls]
Homepage = "https://github.com/wudalu/mcp-hot-news-server"
Documentation = "https://github.com/wudalu/mcp-hot-news-server/blob/main/README.md"
Repository = "https://github.com/wudalu/mcp-hot-news-server"
Issues = "https://github.com/wudalu/mcp-hot-news-server/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
asyncio_mode = "auto" 